--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header class="page-header" role="banner">
-      <a href="/"><h1 class="project-name">DataView User Guide</h1></a>
+      <a id="project-name-link" href="/"><h1 class="project-name">DataView User Guide</h1></a>
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
     </header>
 
